force-app/main/default/objects/Lead/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <label>Motivo de Cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No cumple perfil crediticio</fullName>
            </value>
            <value>
                <fullName>Ingreso insuficiente</fullName>
            </value>
            <value>
                <fullName>Línea no permitida</fullName>
            </value>
            <value>
                <fullName>Cliente desiste</fullName>
            </value>
            <value>
                <fullName>Cierre automático por vencimiento</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>