force-app/main/default/objects/Lead/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <label>Situación Laboral</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependiente</fullName>
            </value>
            <value>
                <fullName>Independiente</fullName>
            </value>
            <value>
                <fullName>Jubilado</fullName>
            </value>
            <value>
                <fullName>Desempleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>