force-app/main/default/objects/Lead/fields/Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto de Interés</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>