force-app/main/default/objects/Lead/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <description>Indica si el prospecto cumple automáticamente con las condiciones de elegibilidad definidas según el producto, ingreso mensual y línea de crédito solicitada.</description>
    <formula>OR(
  AND(
    NOT(ISBLANK(Interested_Product__c)),
    Interested_Product__r.Name = &quot;Visa Plata&quot;,
    Requested_Credit_Limit__c &lt;= 3000,
    Monthly_Income__c &lt;= 3500
  ),
  AND(
    NOT(ISBLANK(Interested_Product__c)),
    Interested_Product__r.Name = &quot;Visa Oro&quot;,
    Requested_Credit_Limit__c &lt;= 5000,
    Monthly_Income__c &lt;= 5500
  ),
  AND(
    NOT(ISBLANK(Interested_Product__c)),
    Interested_Product__r.Name = &quot;Visa Infinite&quot;,
    Requested_Credit_Limit__c &lt;= 7000,
    Monthly_Income__c &gt;= 7500
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Este campo se calcula automáticamente en función del producto de interés, la línea de crédito solicitada y el ingreso mensual del prospecto.</inlineHelpText>
    <label>Cliente Apto</label>
    <type>Checkbox</type>
</CustomField>