force-app/main/default/objects/Lead/fields/Maximum_Attention_Days__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Attention_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Plazo Máximo de Atención</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>