force-app/main/default/objects/Lead/fields/Origin_Channel__c.field-meta.xml
<CustomField>
    <fullName>Origin_Channel__c</fullName>
    <label>Canal de origen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_Channel_Values</valueSetName>
    </valueSet>
</CustomField>