force-app/main/default/objects/Lead/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <label>Línea de Crédito Solicitada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>